--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<head>
+  <title>Luca Fano 04 Projects</title>  
+</head>
+  <body bgcolor:"lightblue">
+
 </body>
 </html>
