--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Luca Fano 04 Projects</title>  
 </head>
-  <body bgcolor:"lightblue">
-
+<body bgcolor="lightblue">
+<h1 align="center">Progetti di Luca Fano 04</h1>
 </body>
 </html>
