--- a/index.html
+++ b/index.html
@@ -5,5 +5,24 @@
 </head>
 <body bgcolor="lightblue">
 <h1 align="center">Progetti di Luca Fano 04</h1>
+<br>
+<h3>Ultimi progetti</h3>
+<br>
+<table align="center">
+	<tr>
+		<td>
+			Calcolo del giorno della settimana in base alla data<br>
+			<a href="">Documentazione</a>
+		</td>
+		<td>
+			
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<a href="https://github.com/luca-facchini-server/week_day">LINK</a>
+		</td>
+	</tr>
+</table>
 </body>
 </html>
