--- a/index.html
+++ b/index.html
@@ -6,21 +6,19 @@
 <body bgcolor="lightblue">
 <h1 align="center">Progetti di Luca Fano 04</h1>
 <br>
-<h3>Ultimi progetti</h3>
+<h3 align="center">Ultimi progetti</h3>
 <br>
 <table align="center">
 	<tr>
 		<td>
-			Calcolo del giorno della settimana in base alla data<br>
-			<a href="">Documentazione</a>
+			<h5>Calcolo del giorno della settimana in base alla data<br>
+			<a href="/week_day">Documentazione</a></h5><br>
+			<a href="https://github.com/luca-facchini-server/week_day">progetto</a>
 		</td>
 		<td>
-			
-		</td>
-	</tr>
-	<tr>
-		<td>
-			<a href="https://github.com/luca-facchini-server/week_day">LINK</a>
+			<h5>Bot di Telegram per il refall<br>
+			<a href="/refall_bot">documentazione</a><br>
+			<a href="https://github.com/lucafano04/Refall_BOT">LINK</a></h5>
 		</td>
 	</tr>
 </table>
