--- a/index.html
+++ b/index.html
@@ -12,13 +12,17 @@
 	<tr>
 		<td>
 			<h5>Calcolo del giorno della settimana in base alla data<br>
-			<a href="/week_day">Documentazione</a></h5><br>
-			<a href="https://github.com/luca-facchini-server/week_day">progetto</a>
+			<a href="/week_day">Documentazione</a><br>
+			<a href="https://github.com/luca-facchini-server/week_day">progetto</a></h5>
 		</td>
+	</tr>
+	<br>
+	<br>
+	<tr>
 		<td>
 			<h5>Bot di Telegram per il refall<br>
 			<a href="/refall_bot">documentazione</a><br>
-			<a href="https://github.com/lucafano04/Refall_BOT">LINK</a></h5>
+			<a href="https://github.com/lucafano04/Refall_BOT">progetto</a></h5>
 		</td>
 	</tr>
 </table>
