--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<td>
 			<h5>Calcolo del giorno della settimana in base alla data<br>
 			<a href="/week_day">Documentazione</a><br>
-			<a href="https://github.com/creators-telegram/week_day">progetto</a></h5>
+			<a href="https://github.com/lucafano04/week_day">progetto</a></h5>
 		</td>
 	</tr>
 	<br>
