--- a/index.html
+++ b/index.html
@@ -6,23 +6,39 @@
 <body bgcolor="lightblue">
 <h1 align="center">Progetti di Luca Fano 04</h1>
 <br>
-<h3 align="center">Ultimi progetti</h3>
-<br>
+<h2 align="center">Ultimi progetti</h3>
 <table align="center">
-	<tr>
+	<tr align="center">
+		<td></td>
 		<td>
-			<h5>Calcolo del giorno della settimana in base alla data<br>
+			<h4 align="center">Calcolo del giorno della settimana in base alla data<br>
 			<a href="/week_day">Documentazione</a><br>
-			<a href="https://github.com/lucafano04/week_day">progetto</a></h5>
+			<a href="https://github.com/lucafano04/week_day">Progetto</a></h4>
 		</td>
+		<td></td>
 	</tr>
-	<br>
-	<br>
+	<tr>
+		<br>
+		<br>
+		<br>
+	</tr>
 	<tr>
 		<td>
-			<h5>Bot di Telegram per il refall<br>
-			<a href="/refall_bot">documentazione</a><br>
-			<a href="https://github.com/creators-telegram/Refall_BOT">progetto</a></h5>
+			<h4 align="center">Bot di Telegram per il refall<br>
+			<a href="/refall_bot">Documentazione</a><br>
+			<a href="https://github.com/creators-telegram/Refall_BOT">Progetto</a></h4>
+		</td>
+		<td>
+			<h4 align="center">Bot di telegram per lo sponsor<br>
+			<a href="/sponsor_bot">Documentazione</a><br>
+			<a href="https://github.com/Creators-telegram/bot_sponsor">Progetto</a>
+			</h4>
+		</td>
+		<td>
+			<h4 align="center">Bot di telegram calcolatrice<br>
+				<a href="/calcolatrice_bot">Documentazione</a><br>
+				<a href="https://github.com/Creators-telegram/Calcolatrice_bot">Progetto</a>
+			</h4>
 		</td>
 	</tr>
 </table>
