--- a/index.html
+++ b/index.html
@@ -9,33 +9,34 @@
 <h2 align="center">Ultimi progetti</h3>
 <table align="center">
 	<tr align="center">
-		<td></td>
+		
 		<td>
 			<h4 align="center">Calcolo del giorno della settimana in base alla data<br>
 			<a href="/week_day">Documentazione</a><br>
 			<a href="https://github.com/lucafano04/week_day">Progetto</a></h4>
 		</td>
-		<td></td>
 	</tr>
 	<tr>
 		<br>
 		<br>
 		<br>
 	</tr>
+</table>
+<table align="center">
 	<tr>
 		<td>
-			<h4 align="center">Bot di Telegram per il refall<br>
+			<h4 align="center">Bot di Telegram per il refall &nbsp;&nbsp;&nbsp;<br>
 			<a href="/refall_bot">Documentazione</a><br>
 			<a href="https://github.com/creators-telegram/Refall_BOT">Progetto</a></h4>
 		</td>
 		<td>
-			<h4 align="center">Bot di telegram per lo sponsor<br>
+			<h4 align="center">Bot di telegram per lo sponsor &nbsp;&nbsp;&nbsp;<br>
 			<a href="/sponsor_bot">Documentazione</a><br>
 			<a href="https://github.com/Creators-telegram/bot_sponsor">Progetto</a>
 			</h4>
 		</td>
 		<td>
-			<h4 align="center">Bot di telegram calcolatrice<br>
+			<h4 align="center">Bot di telegram calcolatrice &nbsp;&nbsp;&nbsp;<br>
 				<a href="/calcolatrice_bot">Documentazione</a><br>
 				<a href="https://github.com/Creators-telegram/Calcolatrice_bot">Progetto</a>
 			</h4>
