--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 <body bgcolor="lightblue">
 <h1 align="center">Progetti di Luca Fano 04</h1>
 <br>
-<h2 align="center">Ultimi progetti</h3>
+<h2 align="center">Ultimi progetti</h2>
+<br>
+<h3 align="center">Programmi in C/C++</h3>
 <table align="center">
 	<tr align="center">
 		
@@ -22,6 +24,8 @@
 		<br>
 	</tr>
 </table>
+<br>
+<h3 align="center">Programmi in JS</h3>
 <table align="center">
 	<tr>
 		<td>
