--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 <h2 align="center">Ultimi progetti</h2>
 <br>
 <h3 align="center">Programmi in C/C++</h3>
-<table align="center">
-	<tr align="center">
-		
+<table align="center" border="0">
+	<tr>
 		<td>
 			<h4 align="center">Calcolo del giorno della settimana in base alla data<br>
 			<a href="/week_day">Documentazione</a><br>
@@ -19,14 +18,11 @@
 		</td>
 	</tr>
 	<tr>
-		<br>
-		<br>
-		<br>
 	</tr>
 </table>
 <br>
 <h3 align="center">Programmi in JS</h3>
-<table align="center">
+<table align="center" border="0">
 	<tr>
 		<td>
 			<h4 align="center">Bot di Telegram per il refall &nbsp;&nbsp;&nbsp;<br>
