--- a/refall_bot/index.html
+++ b/refall_bot/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Calcolatrice bot</title>
+	<title>Refall bot</title>
 </head>
 <body bgcolor="lightblue">
 
